



























Changelog for aNetHack:

* Add a new castle variant.

* Add a "Expensive platinum spellbound imitation amulet of yendor".  Drops from the priest of Moloch, identifies as amulet of Yendor, refuses to enter bags, but doesn't let you go up the stairs to the plains.

* Add "Water vortices", a vortex that can rust your inventory, or kill rust monsters.

* Add the dungeon overview patch

* Add the Elbereth status line patch

* Add the arkenstone patch

* Add the convict patch

* Apply the Brad's pitt patch

* Added Nefi's grudge patch, with the UnNetHack grudges

* Take out a bunch of #ifdefs for features that everyone will always want

* Incorperate shopkeeper services from Slash'EM

* Add sokoban levels from NetHack Fourk

* Apply the dark background patch

* Apply the glyphcolor patch

* Autopickup exceptions can except items in shops

* Remove the "Note: Please use #quit..." message

* Add a message when a secret passage is discovered

* Add door auto-opening from UnNetHack.  Doesn't work on a diagonal

* Add the pilesize patch

* Add "Lev" as a status on the status line

* Patch curses to work with UTF8graphics and hitpointbar

* Fix for C343-162, Magicbane hit messages

* Trying to read a dull spellbook usually makes you fall asleep.  The number o f turns you sleep is dependant on the spell's level.

* Add monsters: snow ant, the cold version of the fire ant -- from Slash'EM, the electric ant -- the shock version of the fire ant, and the water vortex -- rusts inventory when engulfed

* Apply the invoke book of the dead patch

* Add hallucinatory gods

* Add damage messages for healers

* Add "Held" as a status on the status line

* Apply $ to flip a coin

* Zapping dragon scale mail makes it revert to dragon scales

* Allows monks to have jumping kicks

* Apply the harmonic scoring patch

* Apply the changing mazes patch

* Improve the travel system