@@ -66,6 +66,7 @@
 /* Other types of combat */
 #define P_BARE_HANDED_COMBAT	37
 #define P_MARTIAL_ARTS		P_BARE_HANDED_COMBAT	/* Role distinguishes */
+#define P_THIEVERY		P_BARE_HANDED_COMBAT
 #define P_TWO_WEAPON_COMBAT	38	/* Finally implemented */
 #ifdef STEED
 #define P_RIDING		39	/* How well you control your steed */
@@ -93,8 +94,8 @@
 #define P_BASIC			2
 #define P_SKILLED		3
 #define P_EXPERT		4
-#define P_MASTER		5	/* Unarmed combat/martial arts only */
-#define P_GRAND_MASTER	6	/* Unarmed combat/martial arts only */
+#define P_MASTER		5	/* Unarmed combat/martial arts/thievery only */
+#define P_GRAND_MASTER	6	/* Unarmed combat/martial arts/thievery only */
 
 #define practice_needed_to_advance(level) ((level)*(level)*20)
 
