@@ -15,7 +15,7 @@ STATIC_DCL int FDECL(enhance_skill, (boolean));
 
 /* Categories whose names don't come from OBJ_NAME(objects[type])
  */
-#define PN_BARE_HANDED			(-1)	/* includes martial arts */
+#define PN_BARE_HANDED			(-1)	/* includes martial arts, thievery */
 #define PN_TWO_WEAPONS			(-2)
 #define PN_RIDING			(-3)
 #define PN_POLEARMS			(-4)
@@ -77,9 +77,9 @@ STATIC_VAR NEARDATA const char * const odd_skill_names[] = {
     "escape spells",
     "matter spells",
 };
-/* indexed vis `is_martial() */
+/* indexed vis Role_if(PM_ROGUE)? 2 : is_martial() */
 STATIC_VAR NEARDATA const char * const barehands_or_martial[] = {
-    "bare handed combat", "martial arts"
+    "bare handed combat", "martial arts", "thievery"
 };
 
 STATIC_OVL void
@@ -113,7 +113,8 @@ STATIC_DCL void FDECL(skill_advance, (int));
 #define P_NAME(type) ((skill_names_indices[type] > 0) ? \
 		      OBJ_NAME(objects[skill_names_indices[type]]) : \
 		      (type == P_BARE_HANDED_COMBAT) ? \
-			barehands_or_martial[martial_bonus()] : \
+			barehands_or_martial[Role_if(PM_ROGUE) ? 2: \
+						 martial_bonus()] : \
 			odd_skill_names[-skill_names_indices[type]])
 
 #ifdef OVLB
